# selfhosting-monitoring

./: .env.base  .env.example  .env.local.test  .env.local.test.example  .env.test.base  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  targets.yml  targets.yml.example
.github/workflows/: build-and-push.yml  security.yml  tests.yml
deploy/: monitoring.env.prod.example
patches/: smtp_notifier.py
scripts/: deploy-geekom.sh  ghcr-login-github-app.sh  send-test-alert.py
src/monitoring/: config.py  dispatch.py  models.py  policy.py  targets.py
src/monitoring/apps/: __init__.py  matrix_bot.py  worker.py
src/monitoring/checks/: __init__.py  runner.py  types.py
src/monitoring/delivery/: __init__.py  mail_log.py  store.py  tracker.py
src/monitoring/notifiers/: __init__.py  matrix_notifier.py  smtp_notifier.py
src/monitoring/outbox/: __init__.py  redis_outbox.py
src/monitoring/state/: __init__.py  redis_state.py
tests/: conftest.py
tests/fixtures/: targets.test.yml
tests/integration/: test_redis_outbox.py
tests/unit/: test_alert_pipeline.py  test_apps_entrypoints.py  test_checks_types.py  test_config.py  test_delivery_store.py  test_delivery_tracker.py  test_dispatcher.py  test_fallback.py  test_mail_log.py  test_matrix_notifier.py  test_policy.py  test_redis_state.py  test_runner.py  test_smtp_notifier.py  test_targets.py
