[tool.poetry]
name = "selfhosting-monitoring"
version = "0.1.0"
description = "Monitoring service for SelfHosting stack with SMTP and Matrix alerts."
authors = ["Nikita Bragin <bragin.kit@gmail.com>"]
readme = "README.md"
packages = [{ include = "monitoring", from = "src" }]

[tool.poetry.dependencies]
python = "==3.13.*"
pydantic = "==2.13.3"
pydantic-settings = "==2.14.0"
redis = "==7.4.0"
aiohttp = "==3.13.5"
aiosmtplib = "==5.1.0"
matrix-nio = "==0.25.2"
dnspython = "==2.8.0"
PyYAML = "==6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.3"
pytest-asyncio = "==1.3.0"
pytest-cov = "==7.1.0"
fakeredis = "==2.35.1"
ruff = "==0.15.12"
mypy = "==1.20.2"
pre-commit = "==4.3.0"
types-PyYAML = "==6.0.12.20250915"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80 -q"

[tool.poetry.scripts]
monitor-worker = "monitoring.apps.worker:main"
monitor-matrix-bot = "monitoring.apps.matrix_bot:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_configs = true
mypy_path = "src"
exclude = "(^tests/fixtures/)"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nio"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
